syntax = "proto3";

package Raft.Rpc;

message Entry {
    string key = 1;
    string args = 2;
    uint64 term = 3;
}

message RpcAppendEntriesRequest {
    uint64 term = 1;
    string leaderID = 2;
    uint64 prevLogIndex = 3;
    uint64 prevLogTerm = 4;
    repeated Entry entries = 5;
    int64 leaderCommit = 6;
}

message RpcAppendEntriesReply {
	uint64 term = 1;
	bool success = 2;
}

message RpcRequestVoteRequest {
    uint64 term = 1;
    string candidateID = 2;
    uint64 lastLogIndex = 3;
    uint64 lastLogTerm = 4;
}

message RpcRequestVoteReply {
	uint64 term = 1;
	bool voteGranted = 2;
}

service RaftRpc {
    rpc RpcRequestVote (RpcRequestVoteRequest) returns (RpcRequestVoteReply) {}
    rpc RpcHeartbeat (RpcAppendEntriesRequest) returns (RpcAppendEntriesReply) {}
    rpc RpcAppendEntries (RpcAppendEntriesRequest) returns (RpcAppendEntriesReply) {}
}
